# c-validator

./: CMakeLists.txt  FindTarantool.cmake  PROJECT_CONTEXT.md  README.md  cv-scm-1.rockspec
.github/workflows/: publish.yaml  test.yaml
bench/: bench.lua  validator.lua
cv/: CMakeLists.txt  cv.c  init.lua
test/: check_test.lua  compat_test.lua  compile_test.lua  inplace_default_deepcopy_test.lua  nested_test.lua  package_load_test.lua
